--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
@@ -33,6 +33,299 @@
                     <h1 class="h3 mb-0 text-gray-800">고객사 납품</h1>
                 </div>
 
+                <div class="row justify-content-center mb-3">
+                    <div class="col-1">
+                        <select class="custom-select" id="companySelect">
+                            <option selected value="">회사</option>
+                            <option th:each="company : ${companyList}"
+                                    th:value="${company.companyCode}"
+                                    th:text="${company.companyName}"></option>
+                        </select>
+                    </div>
+                    <div class="col-1">
+                        <select class="custom-select" id="plantSelect">
+                            <option selected value="">공장</option>
+                            <option th:each="plant : ${plantList}"
+                                    th:value="${plant.plantCode}"
+                                    th:text="${plant.plantName}"></option>
+                        </select>
+                    </div>
+                    <div class="col-1">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="dateInput" placeholder="YYYYMMDD">
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="orderInput" placeholder="차수">
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="timeInput" placeholder="HH:MM">
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <button type="button" id="createButton" class="btn btn-primary" onclick="clickConfirmButton()">
+                            확인
+                        </button>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center mb-3" style="overflow: auto" id="inquireTableRow">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col-1">라인</th>
+                            <th scope="col-1">공장</th>
+                            <th scope="col-1">순번</th>
+                            <th scope="col-2">보그워너 코드</th>
+                            <th scope="col-1">deliveredQTY</th>
+                            <th scope="col-1">remainQTY</th>
+                            <th scope="col-1">totalQTY</th>
+                            <th scope="col-1">ttime</th>
+                            <th scope="col-1">rtime</th>
+                            <th scope="col-1"></th>
+                            <th class="col-2">보그워너 코드</th>
+                            <th class="col-2">공급업체 코드</th>
+                            <th class="col-1">rop</th>
+                            <th class="col-1">lotMin</th>
+                            <th class="col-1">lotMax</th>
+                            <th class="col-1">전산 재고</th>
+                            <th class="col-1">적입량</th>
+                            <th class="col-1">USAGE</th>
+                            <th class="col-1">입고량</th>
+                            <th class="col-1">
+                                <button type="button" id="sendButton" class="btn btn-danger btn-sm"
+                                        style="visibility: visible;" onclick="clickEnrollButton()">등록
+                                </button>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody id="bomTbody">
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="row justify-content-center mb-3" style="visibility: hidden;" id="submitTableRow">
+                    <table class="table col-4">
+                        <thead>
+                        <tr>
+                            <th class="col-2">보그워너 코드</th>
+                            <th class="col-1">수량</th>
+                            <th class="col-1">
+                                <button type="button" id="submitButton" class="btn btn-danger btn-sm"
+                                        onclick="clickSubmitButton()">등록
+                                </button>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody id="submitTbody">
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="row justify-content-center mb-3" style="visibility: hidden;" id="resultTableRow">
+                    <table class="table col-6">
+                        <thead>
+                        <tr>
+                            <th class="col-2">보그워너 코드</th>
+                            <th class="col-1">로트</th>
+                            <th class="col-1">적입량</th>
+                            <th class="col-1">수량</th>
+                            <th class="col-1">박스수</th>
+                        </tr>
+                        </thead>
+                        <tbody id="resultTbody">
+                        </tbody>
+                    </table>
+                </div>
+
+
+                <script>
+                    let orderInfo = {};
+                    let partList = new Array();
+
+                    window.onload = function () {
+                        let today = new Date();
+                        let year = today.getFullYear();
+                        let month = today.getMonth() + 1;
+                        let day = today.getDate()
+                        let dateStr = "" + year + (month < 10 ? "0" + month : month) + (day < 10 ? "0" + day : day);
+                        document.getElementById("dateInput").value = dateStr;
+                    }
+
+                    async function clickConfirmButton() {
+                        orderInfo.companyCode = findElementValue("companySelect");
+                        orderInfo.plantCode = findElementValue("plantSelect");
+                        orderInfo.date = findElementValue("dateInput");
+                        orderInfo.orderSeq = findElementValue("orderInput") * 1;
+                        orderInfo.time = findElementValue("timeInput");
+
+                        if (orderInfo.companyCode != "" && orderInfo.plantCode != "" && orderInfo.date.length == 8
+                            && orderInfo.orderSeq != "" && orderInfo.time.length == 5) {
+                            if (await checkOrderHistory(orderInfo)) {
+                                disableElement("companySelect");
+                                disableElement("plantSelect");
+                                disableElement("dateInput");
+                                disableElement("orderInput");
+                                disableElement("timeInput");
+                                disableElement("createButton");
+
+                                const url = "/api/task/outgoing/inquire/"
+                                    + orderInfo.companyCode
+                                    + "/" + orderInfo.plantCode;
+                                let response = await fetch(url);
+                                if (response.status == 200) {
+                                    let data = await response.json();
+                                    data = data.sort(function (a, b) {
+                                        let x = a.seq.toLowerCase();
+                                        let y = b.seq.toLowerCase();
+                                        if (x < y) {
+                                            return -1;
+                                        }
+                                        if (x > y) {
+                                            return 1;
+                                        }
+                                        return 0;
+                                    });
+                                    console.log(data);
+                                    createTable(data);
+
+                                }
+                            }
+                        } else {
+                            alert("입력을 확인해주세요")
+                        }
+                    }
+
+                    function createTable(data) {
+                        let tbody = document.getElementById("bomTbody");
+                        for (let i = 0; i < data.length; i++) {
+                            let bom = data[i];
+                            let partInventory = bom.partInventory;
+                            console.log(partInventory);
+                            for (let j = 0; j < partInventory.length; j++) {
+                                let html;
+                                let tr = document.createElement("tr");
+                                if (j == 0) {
+                                    html =
+                                        `<td>` + bom.workCenter + `</td>`
+                                        + `<td>` + bom.plant + `</td>`
+                                        + `<td>` + bom.seq + `</td>`
+                                        + `<td>` + bom.bomBwCode + `</td>`
+                                        + `<td>` + bom.deliveredQTY + `</td>`
+                                        + `<td>` + bom.remainQTY + `</td>`
+                                        + `<td>` + bom.totalQTY + `</td>`
+                                        + `<td>` + bom.ttime + `</td>`
+                                        + `<td>` + bom.rtime + `</td>`
+                                        + `<td class="table-active">` + `</td>`
+                                } else {
+                                    html =
+                                        `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td>` + `</td>`
+                                        + `<td class="table-active">` + `</td>`
+                                }
+                                let temp = partInventory[j];
+                                let calInputAmount = (bom.remainQTY * temp.usage);
+                                if (calInputAmount > (temp.lotMax - temp.stockQTY)) {
+                                    calInputAmount = (temp.lotMax - temp.stockQTY);
+                                }
+                                if (calInputAmount < 0){
+                                    calInputAmount = 0;
+                                }
+                                html += `<td>` + temp.partBwCode + `</td>`
+                                    + `<td>` + temp.spCode + `</td>`
+                                    + `<td>` + temp.rop + `</td>`
+                                    + `<td>` + temp.lotMin + `</td>`
+                                    + `<td>` + temp.lotMax + `</td>`
+                                    + `<td>` + temp.stockQTY + `</td>`
+                                    + `<td>` + temp.loadAmount + `</td>`
+                                    + `<td>` + temp.usage + `</td>`
+                                    + `<td>` + `<div class="input-group"><input type="text" class="form-control" placeholder="수량" value="` + calInputAmount + `"></div>` + `</td>`
+                                    + `<td>` + `<button type="button" class="btn btn-success btn-sm" onclick="enrollPart(this)"><i class="fas fa-check"></i></button>` + `</td>`
+                                tr.innerHTML = html;
+                                tbody.append(tr);
+                            }
+                        }
+                    }
+
+                    function enrollPart(element) {
+                        let tr = element.parentNode.parentNode;
+                        let tdList = tr.childNodes;
+                        let bwCode = tdList[10].innerText;
+                        let amount = tdList[18].childNodes[0].childNodes[0].value * 1
+                        if (amount > 0) {
+                            partList.push({bwCode, amount});
+                            tdList[18].childNodes[0].childNodes[0].disabled = true;
+                            tdList[19].childNodes[0].disabled = true;
+                        } else {
+                            alert("수량을 다시 입력하세요");
+                        }
+
+                    }
+
+                    function clickEnrollButton() {
+                        let tableRow = document.getElementById("inquireTableRow")
+                        removeAllNode(tableRow);
+
+                        visibleElement("submitTableRow");
+
+                        let tbody = document.getElementById("submitTbody");
+
+                        for (let i = 0; i < partList.length; i++) {
+                            let temp = partList[i];
+                            let tr = document.createElement("tr");
+
+                            tr.innerHTML = `<td>` + temp.bwCode + `</td>`
+                                + `<td>` + temp.amount + `</td>`
+                                + `<td>` + '' + `</td>`;
+                            tbody.append(tr);
+                        }
+
+                    }
+
+                    async function clickSubmitButton() {
+                        orderInfo.partList = partList;
+                        const url = "/api/task/outgoing/submit"
+                        let response = await fetch(url, {
+                            headers: {
+                                "Content-Type": "application/json",
+                            },
+                            method: "POST",
+                            body: JSON.stringify(orderInfo)
+                        });
+
+                        if (response.status == 200) {
+                            let data = await response.json();
+                            let tableRow = document.getElementById("submitTableRow")
+                            removeAllNode(tableRow);
+                            visibleElement("resultTableRow");
+                            let tbody = document.getElementById("resultTbody");
+
+                            for (let i = 0; i < data.length; i++) {
+                                let temp = data[i];
+                                let tr = document.createElement("tr");
+                                tr.innerHTML = `<td>` + temp.bwCode + `</td>`
+                                    + `<td>` + temp.lot + `</td>`
+                                    + `<td>` + temp.loadAmount + `</td>`
+                                    + `<td>` + temp.quantity + `</td>`
+                                    + `<td>` + Math.ceil(temp.quantity / temp.loadAmount) + `</td>`;
+                                tbody.append(tr);
+                            }
+                        }
+
+
+                    }
+                </script>
+
 
             </div>
             <!-- /.container-fluid -->
