수량 체크 기능 추가, 엑셀 다운로드

--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-manual.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-manual.html
@@ -265,7 +265,7 @@
                     }
 
                     function openReport() {
-                        window.open(reportUrl);
+                        window.open(https://es-qms.borgwarner.com/qms/payment_card2.main?p_companycd=00&p_vendcd=${data[0]}&p_plant=${data[1]}&p_income_date=${data[2]}&p_sno=${data[3]});
                     }
                 </script>
 
