--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
@@ -3,6 +3,10 @@
 
 <head>
     <div th:replace="fragments/header.html :: fragment-header"></div>
+    <!-- SheetJS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.3/xlsx.full.min.js"></script>
+    <!-- FileSaver saveAs CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -45,13 +49,19 @@
                     <div class="col-2 input-group">
                         <input type="text" class="form-control" id="dateInput" placeholder="YYYYMMDD">
                     </div>
-                    <div class="col-1">
+                    <div class="col-2">
                         <button type="button" class="btn btn-primary btn-sm" onclick="clickLogButton()"><i
                                 class="fas fa-search"></i></button>
+                        <button type="button" class="btn btn-success btn-sm" onclick="clickExcelButton()"><i
+                                class="far fa-file-excel"></i>
+                        </button>
                     </div>
                 </div>
 
                 <script>
+
+                    let companyCode;
+                    let date;
 
                     window.onload = function () {
                         let today = new Date();
@@ -63,8 +73,8 @@
                     }
 
                     function clickLogButton() {
-                        let companyCode = document.getElementById("companySelect").value;
-                        let date = document.getElementById("dateInput").value;
+                        companyCode = document.getElementById("companySelect").value;
+                        date = document.getElementById("dateInput").value;
                         if (companyCode != "" & date != "") {
                             const url = `/api/task/part-log/` + companyCode + `/` + date;
                             fetch(url).then(response => {
@@ -87,9 +97,12 @@
                             let tr = document.createElement("tr");
                             let temp = data[i];
 
-                            let td = document.createElement("td");
-                            td.innerText = temp.partBwCode;
-                            tr.append(td);
+                            let td1 = document.createElement("td");
+                            td1.innerText = temp.spCode;
+                            let td2 = document.createElement("td");
+                            td2.innerText = temp.spCode;
+
+                            tr.append(td1, td2);
 
                             createIncomeAndModifyRow(tr, temp.incomeLog);
                             createIncomeAndModifyRow(tr, temp.modifyLog);
@@ -133,13 +146,21 @@
                         tr.append(td)
                     }
 
+                    function clickExcelButton() {
+                        let wb = XLSX.utils.table_to_book(document.getElementById('partLogTable'), {
+                            sheet: date,
+                            raw: true
+                        });
+                        XLSX.writeFile(wb, (`${companyCode}-${date}.xlsx`));
+                    }
+
                 </script>
 
                 <div class="row" style="overflow: auto">
                     <table class="table table-bordered text-center" id="partLogTable">
                         <thead>
                         <tr>
-                            <th colspan="1"></th>
+                            <th colspan="2"></th>
                             <th colspan="5" class="table-info">입고</th>
                             <th colspan="5" class="table-warning">보정</th>
                             <th colspan="20" class="table-success">1공장</th>
@@ -147,7 +168,8 @@
                             <th colspan="1" class="table-danger" style="white-space: nowrap">불량</th>
                         </tr>
                         <tr>
-                            <th style="white-space: nowrap">부품</th>
+                            <th style="white-space: nowrap">공급자 코드</th>
+                            <th style="white-space: nowrap">보그워너 코드</th>
                             <!-- 입고 -->
                             <th class="table-info" style="white-space: nowrap">용차</th>
                             <th class="table-info">1</th>
