--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -37,7 +37,7 @@
                 <a class="collapse-item" th:href="@{/task/outgoing}">생산계획 납품</a>
                 <a class="collapse-item" th:href="@{/task/outgoing-select}">선택품 납품</a>
                 <a class="collapse-item" th:href="@{/task/order-history}">납품 현황</a>
-                <a class="collapse-item" th:href="@{/task/outgoing-manual}">고객사 수동 납품</a>
+<!--                <a class="collapse-item" th:href="@{/task/outgoing-manual}">고객사 수동 납품</a>-->
             </div>
         </div>
     </li>
